--- a/shipment_out_edi_template.jinja2
+++ b/shipment_out_edi_template.jinja2
@@ -18,7 +18,11 @@ PIALIN||||{{move.lot.number}}
 {% endif -%}
 IMDLIN|F|{{move.product.name}}
 QTYLIN|12|{{move.quantity}}|{{UOMS.get(move.uom.symbol)}}
-{% if move.lot and move.lot.expiration_date -%}
-PCILIN|36E|{{move.lot.expiration_date|replace('-','')}}
+{% if move.lot -%}
+{% if move.lot.expiration_date -%}
+PCILIN|36E|{{move.lot.expiration_date|replace('-','')}}||||||{{move.lot.number}}
+{% else -%}
+PCILIN|36E|||||||{{move.lot.number}}
+{% endif -%}
 {% endif -%}
 {% endfor -%}
