--- a/shipment_out_edi_template.jinja2
+++ b/shipment_out_edi_template.jinja2
@@ -10,11 +10,11 @@ NADDP|{{shipment.customer.edi_operational_point}}
 NADUC|{{shipment.customer.edi_operational_point}}
 NADSH|{{shipment.company.party.edi_operational_point}}
 TDT|30
-{% for move in shipment.outgoing_moves -%}
 CPS|1
+{% for move in shipment.outgoing_moves -%}
 LIN|{{move.product.code_ean13}}|EN|{{loop.index}}
 {% if move.lot -%}
-PIALIN||||{{move.lot.number}}
+PIALIN|||||||||{{move.lot.number}}
 {% endif -%}
 IMDLIN|F|{{move.product.name}}
 QTYLIN|12|{{move.quantity}}|{{UOMS.get(move.uom.symbol)}}
