Add is_edi to shipment.out model and update translations | #047562

--- a/shipment_out_edi_template.jinja2
+++ b/shipment_out_edi_template.jinja2
@@ -1,7 +1,7 @@
 DESADV_D_96A_UN_EAN005
 BGM|{{shipment.number}}|351|9
 DTM|{{shipment.effective_date|replace('-','')}}|{{shipment.planned_date|replace('-','')}}
-RFF|DQ|{{shipment.rference}}|{{shipment.effective_date|replace('-','')}}
+RFF|DQ|{{shipment.reference}}|{{shipment.effective_date|replace('-','')}}
 NADMS|{{shipment.company.party.edi_operational_point}}
 NADMR|{{shipment.customer.edi_operational_point}}
 NADBY|{{shipment.company.party.edi_operational_point}}
