--- a/view/shipment_out_form.xml
+++ b/view/shipment_out_form.xml
@@ -2,6 +2,10 @@
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
 <data>
+    <xpath expr="/form/field[@name='warehouse']" position="after">
+        <label name="is_edi"/>
+        <field name="is_edi"/>
+    </xpath>
     <xpath expr="/form/group[@id='buttons']" position="inside">
         <button name="generate_edi_file"/>
     </xpath>
