Fix the way that EAN13 of a prouct is obtained

--- a/shipment_out_edi_template.jinja2
+++ b/shipment_out_edi_template.jinja2
@@ -12,7 +12,7 @@ NADSH|{{shipment.company.party.edi_operational_point}}
 TDT|30
 CPS|1
 {% for move in shipment.outgoing_moves -%}
-LIN|{{move.product.code_ean13}}|EN|{{loop.index}}
+LIN|{{move.code_ean13}}|EN|{{loop.index}}
 {% if move.lot -%}
 PIALIN|||||||||{{move.lot.number}}
 {% endif -%}
