Add the possibility to choose send or not the EDI file automatically.
Add an advice when send the EDI file automatically.

--- a/view/stock_configuration_form.xml
+++ b/view/stock_configuration_form.xml
@@ -4,6 +4,8 @@
 <data>
     <xpath expr="/form" position="inside">
         <label name="outbox_path_edi"/>
-        <field name="outbox_path_edi" colspan="3"/>
+        <field name="outbox_path_edi"/>
+        <label name="automatic_edi_shipment_out"/>
+        <field name="automatic_edi_shipment_out"/>
     </xpath>
 </data>
