--- a/shipment_out_edi_template.jinja2
+++ b/shipment_out_edi_template.jinja2
@@ -15,7 +15,7 @@ CPS|1
 {% for move in shipment.outgoing_moves -%}
 LIN|{{move.code_ean13}}|EN|{{loop.index}}
 {% if move.lot -%}
-PIALIN|||||||||{{move.lot.number}}
+PIALIN||{{move.product.code}}|||||||{{move.lot.number}}
 {% endif -%}
 IMDLIN|F|{{move.product.name}}
 QTYLIN|12|{{move.quantity}}|{{UOMS.get(move.uom.symbol)}}
