--- a/shipment_out_edi_template.jinja2
+++ b/shipment_out_edi_template.jinja2
@@ -17,7 +17,7 @@ LIN|{{move.code_ean13}}|EN|{{loop.index}}
 {% if move.lot -%}
 PIALIN||{{move.product.code}}|||||||{{move.lot.number}}
 {% endif -%}
-IMDLIN|F|{{move.product.name}}
+IMDLIN|F|{{move.product.name|truncate(35)}}
 QTYLIN|12|{{move.quantity}}|{{UOMS.get(move.uom.symbol)}}
 {% if move.lot -%}
 {% if move.lot.expiration_date -%}
