--- a/shipment_out_edi_template.jinja2
+++ b/shipment_out_edi_template.jinja2
@@ -14,16 +14,10 @@ TDT|30
 CPS|1
 {% for move in shipment.outgoing_moves -%}
 LIN|{{move.code_ean13}}|EN|{{loop.index}}
-{% if move.lot -%}
-PIALIN||{{move.product.code}}|||||||{{move.lot.number}}
-{% endif -%}
+PIALIN||{{move.product.code}}|||||||{% if move.lot -%}{{move.lot.number}}{% endif -%}
 IMDLIN|F|{{move.product.name|truncate(35)}}
 QTYLIN|12|{{move.quantity}}|{{UOMS.get(move.uom.symbol)}}
 {% if move.lot -%}
-{% if move.lot.expiration_date -%}
-PCILIN|36E|{{move.lot.expiration_date|replace('-','')}}||||||{{move.lot.number}}
-{% else -%}
-PCILIN|36E|||||||{{move.lot.number}}
-{% endif -%}
+PCILIN|36E|{% if move.lot.expiration_date -%}{{move.lot.expiration_date|replace('-','')}}{% endif -%}||||||{{move.lot.number}}
 {% endif -%}
 {% endfor -%}
