--- a/shipment_out_edi_template.jinja2
+++ b/shipment_out_edi_template.jinja2
@@ -1,23 +1,27 @@
 DESADV_D_96A_UN_EAN005
-BGM|{{shipment.number}}|351|9
-DTM|{{shipment.effective_date|replace('-','')}}|{{shipment.planned_date|replace('-','')}}
-RFF|DQ|{{shipment.reference}}|{{shipment.effective_date|replace('-','')}}
-RFF|ON|{{shipment.reference}}|{{shipment.effective_date|replace('-','')}}
-NADMS|{{shipment.company.party.edi_operational_point}}
-NADMR|{{shipment.customer.edi_operational_point}}
-NADBY|{{shipment.company.party.edi_operational_point}}
-NADSU|{{shipment.customer.edi_operational_point}}
-NADDP|{{shipment.customer.edi_operational_point}}
-NADUC|{{shipment.customer.edi_operational_point}}
-NADSH|{{shipment.company.party.edi_operational_point}}
+BGM|{{ shipment.number }}|351|9
+DTM|{{ shipment.effective_date|replace('-','') }}|{{ shipment.planned_date|replace('-','') }}
+RFF|DQ|{{ shipment.reference }}|{{ shipment.effective_date|replace('-','') }}
+RFF|ON|{{ shipment.reference }}|{{ shipment.effective_date|replace('-','') }}
+NADMS|{{ shipment.company.party.edi_operational_point }}
+NADMR|{{ shipment.customer.edi_operational_point }}
+NADBY|{{ shipment.company.party.edi_operational_point }}
+NADSU|{{ shipment.customer.edi_operational_point }}
+NADDP|{{ shipment.customer.edi_operational_point }}
+NADUC|{{ shipment.customer.edi_operational_point }}
+NADSH|{{ shipment.company.party.edi_operational_point }}
 TDT|30
 CPS|1
 {% for move in shipment.outgoing_moves -%}
-LIN|{{move.code_ean13}}|EN|{{loop.index}}
-PIALIN||{{move.product.code}}|||||||{% if move.lot -%}{{move.lot.number}}{% endif -%}
-IMDLIN|F|{{move.product.name|truncate(35)}}
-QTYLIN|12|{{move.quantity}}|{{UOMS.get(move.uom.symbol)}}
+LIN|{{ move.code_ean13 }}|EN|{{ loop.index }}
 {% if move.lot -%}
-PCILIN|36E|{% if move.lot.expiration_date -%}{{move.lot.expiration_date|replace('-','')}}{% endif -%}||||||{{move.lot.number}}
+PIALIN||{{ move.product.code }}|||||||{{ move.lot.number }}
+{% else -%}
+PIALIN||{{ move.product.code }}|||||||
+{% endif -%}
+IMDLIN|F|{{ move.product.name|truncate(35) }}
+QTYLIN|12|{{ move.quantity }}|{{ UOMS.get(move.uom.symbol) }}
+{% if move.lot -%}
+PCILIN|36E|{% if move.lot.expiration_date -%}{{ move.lot.expiration_date|replace('-','') }}{% endif -%}||||||{{ move.lot.number }}
 {% endif -%}
 {% endfor -%}
