Revert the control if lot exist. Jinja2 take care if the field exist before check if the field have value.

--- a/shipment_out_edi_template.jinja2
+++ b/shipment_out_edi_template.jinja2
@@ -18,7 +18,7 @@ TDT|30
 CPS|1
 {% for move in shipment.outgoing_moves -%}
 LIN|{{ move.code_ean13 }}|EN|{{ loop.index }}
-{% if move.get('lot') -%}
+{% if move.lot -%}
 PIALIN||{{ move.product.code }}|||||||{{ move.lot.number }}
 {% else -%}
 PIALIN||{{ move.product.code }}|||||||
