Do not crash creating the EDI shipment. | #164015

--- a/shipment_out_edi_template.jinja2
+++ b/shipment_out_edi_template.jinja2
@@ -5,7 +5,7 @@ RFF|DQ|{{ shipment.number }}|{{ shipment.effective_date|replace('-','') }}
 RFF|ON|{{ shipment.reference }}|{{ shipment.effective_date|replace('-','') }}
 NADMS|{{ shipment.company.party.edi_operational_point_head }}
 NADMR|{{ shipment.customer.edi_operational_point_head }}
-{% if move.origin -%}
+{% if shipment.edi_operational_point_head -%}
 NADBY|{{ shipment.edi_operational_point_head }}
 {% else -%}
 NADBY|{{ shipment.customer.edi_operational_point_head }}
